--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 
 android {
     namespace 'com.hwinzniej.getmusicid3info'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.hwinzniej.getmusicid3info"
         minSdk 23
-        targetSdk 33
-        versionCode 3
-        versionName "1.0.2-beta"
+        targetSdk 34
+        versionCode 4
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -31,7 +31,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
